final draft - almost an exact match of DRIP
Almost exact match of the current (legacy) production DRIP adapters' xmljson has been achieved. Only missing:
1. wo-cache call is not emulated/done, so fields added by wo-cache are not tested for. A final implementation would have to add this step
2. Whitespaces are almost exact match, but there might be an extra or missing whitespace, especially adjacent to a newline \n, e.g. ' \n' instead of '\n' or vice et versa